# krs-llm-pipeline-demo

./: .gitignore  README.md  pyproject.toml
examples/: config.hf.toml  config.ollama.toml
helper_scripts/: start_ollama_server.sh
llm_pipeline/: __init__.py  cli.py  config.py  ollama_client.py  output.py  runner.py
llm_pipeline/backends/: __init__.py  base.py  hf_backend.py  ollama_backend.py
llm_pipeline/edgar/: extract.py
ollama_runner/: cli.py  prompts.py  runner.py
ollama_runner/backends/: hf_backend.py
ollama_runner/edgar/: cli.py
tests/: test_config.py  test_ollama_client.py  test_prompts.py
